--- a/app/src/main/res/layout/item_match.xml
+++ b/app/src/main/res/layout/item_match.xml
@@ -1,68 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="15dp"
-    app:cardElevation="25dp"
-    android:padding="8dp"
-    android:layout_margin="8dp"
+    android:layout_width = "match_parent"
+    android:layout_height = "wrap_content"
+    android:orientation = "vertical"
     >
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/heading"
+        android:layout_width = "wrap_content"
+        android:layout_height = "wrap_content"
+        android:text=""
+        android:padding="12dp"
+        android:textSize="45sp"
+        android:visibility="gone"
+        />
+
+
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="15dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="10dp"
+        android:layout_marginVertical="10dp"
         >
-
-        <TextView
-            android:id="@+id/cv_team1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="IND"
-            android:textSize="20sp"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=" VS "
-            android:textSize="20sp"
-            />
-
-        <TextView
-            android:id="@+id/cv_team2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="PAK"
-            android:textSize="20sp"
-            />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="end"
+            android:padding="10dp"
+            android:gravity="center"
             >
 
             <TextView
-                android:id="@+id/cv_time"
+                android:id="@+id/cv_team1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Match Starts at Oct 21, 2023"
+                android:text=""
+                android:textSize="20sp"
                 />
 
             <TextView
-                android:id="@+id/location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Lucknow"
+                android:text=" vs "
+                android:textSize="16sp"
                 />
+
+            <TextView
+                android:id="@+id/cv_team2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textSize="20sp"
+                />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="end"
+                >
+
+                <TextView
+                    android:id="@+id/cv_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:paddingVertical="5dp"
+                    android:textSize="12sp"
+                    />
+
+                <TextView
+                    android:id="@+id/location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:paddingVertical="5dp"
+                    android:textSize="12sp"
+                    />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
 
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-
-</androidx.cardview.widget.CardView>
+</LinearLayout>
