--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,15 @@
     <style name="Base.Theme.AndroidWorrkshop" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name = "fontFamily">@font/inter</item>
+        <item name = "android:textColor">@color/white</item>
+        <item name = "android:colorBackground">@color/black</item>
+        <item name = "android:windowFullscreen">true</item>
     </style>
+
+    <style name = "CardView.AndroidWorkshop" parent="CardView">
+        <item name = "cardBackgroundColor">#1B181E</item>
+    </style>
+
+
 </resources>
