--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,9 @@
     <style name="Base.Theme.AndroidWorrkshop" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name = "fontFamily">@font/inter</item>
+        <item name = "android:textColor">@color/black</item>
+        <item name = "android:windowFullscreen">true</item>
     </style>
 
-    <style name="Theme.AndroidWorrkshop" parent="Base.Theme.AndroidWorrkshop" />
 </resources>
